# QMessageServer

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  resources.qrc
exampleHTML/: index.html  script.js  style.css
resources/html/: index.html  script.js  style.css
src/: ChatServer.cpp  ChatServer.h  HttpServer.cpp  HttpServer.h  HttpsServer.cpp  HttpsServer.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp
